--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "start": "node index.js",
     "pretest": "./node_modules/jshint/bin/jshint app",
-    "test": "gulp test"    
+    "test": "gulp test",  
+    "build": "gulp test" 
   },
   "dependencies": {
     "cors": "^2",
