--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://bitbucket.org/lubdub/lubdub.git"
+    "url": "https://github.com/LubDub/lubdub"
   },  
   "scripts": {
     "start": "node index.js",
